package br.com.calcmot.ui

internal const val CALCMOT_SUPPORT_EMAIL = "eduardoangelo20001@gmail.com"
